fix navbar covering entire page

--- a/public/stylesheets/deadline.css
+++ b/public/stylesheets/deadline.css
@@ -38,7 +38,6 @@
 .side-bar-fix{
 	position:fixed;
 	top:0;
-	height:100vh;
 }
 
 .drawer-icon{
